--- a/ISS-Task/Localizable.strings
+++ b/ISS-Task/Localizable.strings
@@ -5,3 +5,21 @@
 //  Created by Boris Ezhov on 25.02.2022.
 //  Copyright (c) 2022 Boris Ezhov. All rights reserved.
 //
+
+// TransportType: Localized String
+"Bus stop" = "Автобусная остановка";
+
+// TransportType: Localized String
+"MCD station" = "Станция МЦД";
+
+// TransportType: Localized String
+"Subway hall" = "Станция метро";
+
+// StopsViewController: Title
+"Stops" = "Остановки";
+
+// TransportType: Localized String
+"Train station" = "Железнодорожная станция";
+
+// TransportType: Localized String
+"Tram stop" = "Трамвайная остановка";
